# Bank_System_QT

./: Login Request.drawio  README.md  Requests.drawio
Bank_Client/: Bank_System_Requests.cpp  Bank_System_Requests.h  CMakeLists.txt  client.cpp  client.h  httprequestsender.cpp  httprequestsender.h  main.cpp  socket.cpp  socket.h
Bank_Server/: DataBase.cpp  DataBase.h  DataBase.json  main.cpp  server.cpp  server.h  thread.cpp  thread.h
